k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-serving-service
  namespace: ml-serving
  labels:
    app.kubernetes.io/name: ml-serving-api
    app.kubernetes.io/part-of: mlops-platform
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "8000"
spec:
  type: ClusterIP
  selector:
    app: ml-serving-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
